--- a/modelo.html
+++ b/modelo.html
@@ -6,11 +6,13 @@
 -->
 <html>
 	<head>
-		<title>Elements - Stellar by HTML5 UP</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<meta http-equiv="content-type" content="text/html; charset=utf-8">
+		<title>Portafolio IMM 2018/2019</title>
+		<meta name="author" content="Ana Cecília Vieira, Johans Peña, Andrea Naranjo">
+		<meta name="description" content="Portafolio hecho durante la disciplina IMM del MUGI, resultado de la compilación de todas las actividades prácticas.">
+		<link rel="stylesheet" type="text/css" href="assets/css/main.css">
+		<link href="https://fonts.googleapis.com/css?family=Concert+One%7CMonoton" rel="stylesheet">
+		<link rel="icon" href="images/home_portafolio.jpg">
 	</head>
 	<body class="is-preload">
 
@@ -22,6 +24,17 @@
 						<h1>Elements</h1>
 						<p>Ipsum dolor sit amet nullam</p>
 					</header>
+					
+				<!-- Nav -->
+				<nav id="nav">
+					<ul>
+						<li><a href="#equipo">Equipo</a></li>
+						<li><a href="practica_texto">Texto</a></li>
+						<li><a href="practica_imagen" class="active">Imagen</a></li>
+						<li><a href="practica_audio">Áudio</a></li>
+						<li><a href="practica_stream">Stream</a></li>
+					</ul>
+				</nav>
 
 				<!-- Main -->
 					<div id="main">
