--- a/modelo.html
+++ b/modelo.html
@@ -359,32 +359,24 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 					</div>
 
 				<!-- Footer -->
-					<footer id="footer">
-						<section>
-							<h2>Aliquam sed mauris</h2>
-							<p>Sed lorem ipsum dolor sit amet et nullam consequat feugiat consequat magna adipiscing tempus etiam dolore veroeros. eget dapibus mauris. Cras aliquet, nisl ut viverra sollicitudin, ligula erat egestas velit, vitae tincidunt odio.</p>
-							<ul class="actions">
-								<li><a href="#" class="button">Learn More</a></li>
-							</ul>
-						</section>
-						<section>
-							<h2>Etiam feugiat</h2>
-							<dl class="alt">
-								<dt>Address</dt>
-								<dd>1234 Somewhere Road &bull; Nashville, TN 00000 &bull; USA</dd>
-								<dt>Phone</dt>
-								<dd>(000) 000-0000 x 0000</dd>
-								<dt>Email</dt>
-								<dd><a href="#">information@untitled.tld</a></dd>
-							</dl>
-							<ul class="icons">
-								<li><a href="#" class="icon fa-twitter alt"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon fa-facebook alt"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon fa-instagram alt"><span class="label">Instagram</span></a></li>
-								<li><a href="#" class="icon fa-github alt"><span class="label">GitHub</span></a></li>
-								<li><a href="#" class="icon fa-dribbble alt"><span class="label">Dribbble</span></a></li>
-							</ul>
-						</section>
+				<footer id="footer">
+					<section id="equipo">
+						<h2>Equipo</h2>
+						<p>Somos una bibliotecária, un ingenero industrial y una periodista con el objetivo de profundizar nuestro conocimiento sobre Gestión de la Información.</p>
+						
+					</section>
+					<section>
+						<h2>Contactos</h2>
+						<dl class="alt">
+							<dt>Ana Cecília Vieira</dt>
+							<dd>anvisil@inf.upv.es</dd>
+							<dt>Andrea Naranjo</dt>
+							<dd>annacha@inf.upv.es</dd>
+							<dt>Johans Peña</dt>
+							<dd>jopear4@inf.upv.es</dd>
+						</dl>
+						
+					</section>
 						<p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 					</footer>
 
