--- a/index.html
+++ b/index.html
@@ -31,8 +31,9 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul>
-							<li><a href="#equipo" class="active">Equipo</a></li>
-							<li><a href="practica_texto">Texto</a></li>
+							<li><a href="index.html" class="active">Home</a></li>
+							<li><a href="#equipo">Equipo</a></li>
+							<li><a href="practica_texto.html">Texto</a></li>
 							<li><a href="practica_imagen">Imagen</a></li>
 							<li><a href="practica_audio">Áudio</a></li>
 							<li><a href="practica_stream">Stream</a></li>
@@ -53,7 +54,7 @@
 										practicas aprendidas durante la asignatura Información 
 										Multimedia en Entornos Multidispositivo en el periodo entre sept. 2018 y ene. 2019. </p>										
 									</div>
-									<span class="image"><img src="images/home_portafolio.png" alt="" /></span>
+									<span class="image"><img src="images/home_portafolio.png" alt="Forma circular de color lilas que contiene dibujos de un micrófono, película, cd y claqueta" /></span>
 								</div>
 							</section>
 
