--- a/practica_texto.html
+++ b/practica_texto.html
@@ -11,7 +11,6 @@
 		<meta name="author" content="Ana Cecília Vieira, Johans Peña, Andrea Naranjo">
 		<meta name="description" content="Portafolio hecho durante la disciplina IMM del MUGI, resultado de la compilación de todas las actividades prácticas.">
 		<link rel="stylesheet" type="text/css" href="assets/css/main.css">
-		<link href="https://fonts.googleapis.com/css?family=Concert+One%7CMonoton" rel="stylesheet">
 		<link rel="icon" href="images/home_portafolio.jpg">
 	</head>
 	<body class="is-preload">
@@ -42,7 +41,7 @@
 					<ul>
 						<li><a href="#ejercicio1" class="active">Ejercicio 1</a></li>
 						<li><a href="#ejercicio2">Ejercicio 2</a></li>
-						<li><a href="practica_texto.html">Texto</a></li>
+						<li><a href="#ejercicio3">Ejercicio 3</a></li>
 						<li><a href="practica_imagen">Imagen</a></li>
 						<li><a href="practica_audio">Áudio</a></li>
 						<li><a href="practica_stream">Stream</a></li>
@@ -70,10 +69,10 @@
 									<h3>Imágenes</h3>
 									<div class="box alt">
 										<div class="row gtr-uniform">                                                    
-											<div class="col-5"><span class="image fit"><img src="images/practica_texto_jpg.jpg" alt="Dibujo con vista de arriba de un portátil con dos manos, alrededor hay dos libros, planta, garfas, taza, cuaderno, lápiz y ratón." /></span></div>
-											<div class="col-5"><span class="image fit"><img src="images/practica_texto_svg.svg" alt="Dibujo con vista de arriba de un portátil con dos manos, alrededor hay dos libros, planta, garfas, taza, cuaderno, lápiz y ratón." /></span></div>
-											<div class="col-5"><p>Imagen en mapa de bits</p></div>
-											<div class="col-5"><p>Imagen vectorial</p></div>                                                    
+											<div class="col-6"><span class="image fit"><img src="images/practica_texto_jpg.jpg" alt="Dibujo con vista de arriba de un portátil con dos manos, alrededor hay dos libros, planta, garfas, taza, cuaderno, lápiz y ratón." /></span></div>
+											<div class="col-6"><span class="image fit"><img src="images/practica_texto_svg.svg" alt="Dibujo con vista de arriba de un portátil con dos manos, alrededor hay dos libros, planta, garfas, taza, cuaderno, lápiz y ratón." /></span></div>
+											<div class="col-6"><p>Imagen en mapa de bits</p></div>
+											<div class="col-6"><p>Imagen vectorial</p></div>                                                    
 										</div>
 									</div>
 								
@@ -82,12 +81,12 @@
 									<p>Episodio 27 del podcast Programarfacil.com que enseña como comenzar un desarrollo web con HTML5.</p>
 									<div class="box alt">
 										<div class="row gtr-uniform">
-											<div class="col-12"><span class="audio fit">
+											<div class="col-12">
 												<audio controls>
 													<source src="audios/desarrollo_web_con_HTML5.mp3" type="audio/mp3">
 												</audio>
 											<br><b>Fuente:</b><a rel="external" target="_blank" href="https://programarfacil.com/podcast/27-desarrollo-web-con-html5/"> Podcast Programar facil.com</a>
-											</span></div>												
+											</div>												
 										</div>
 									</div>
 
@@ -95,12 +94,12 @@
 									<p>Primer capítulo del curso de HTML5 promovido por la academia virtual Píldoras Informáticas.</p>                                      
 									<div class="box alt">
 										<div class="row gtr-uniform">
-											<div class="col-12"><span class="video fit">
-												<video controls>
+											<div class="col-12">
+												<video width=100% controls>
 													<source src="videos/Curso_HTML_5_Presentacion_Video_1.mp4" type="video/mp4">
 												</video>
 											<br><b>Fuente:</b><a rel="external" target="_blank" href="https://www.youtube.com/watch?v=QC9_8nRNNHA&list=PLU8oAlHdN5BnX63lyAeV0LzLnpGudgRrK"> Curso HTML 5. Presentación. Video 1</a>
-											</span></div>												
+											</div>												
 										</div>
 									</div>                                   
 
@@ -145,17 +144,44 @@
 
 									<section id="ejercicio2">
 										<h2>Ejercicio 2</h2>
+										<p>Trás submeter a revisión del sitio <a rel="external" target="_blank" href="https://validator.w3.org">https://validator.w3.org</a> el código fuente de este sitio web, fueron descubiertos los errores presentados en la imagen a continuación:</p>
+										<div class="box alt">
+											<div class="row gtr-uniform">												
+												<div class="col-12"><span class="image fit"><img src="images/valide_html.jpg" alt="Printscreen de los errores producidos trás validación del código fuente del borrador de este sitio web"></span></div>												
+											</div>											
+										</div>
+										<p>Para corregir los citados errores, leímos la <a rel="external" target="_blank" href="https://html.spec.whatwg.org/multipage/dom.html#flow-content-2">documentación enlazada en cada error</a> y cambiamos la tag "p" por la "br".</p>
+										<p>Por no existir la opción "Information | View Page Information" en la barra de herramientas <a rel="external" target="_blank" href="https://chrispederick.com/work/web-developer/">Web Developer</a>, sugerida por el profesor, en la fecha de 21 de diciembre de 2018 revisamos el código fuente del portafolio, aún en desarrollo, en el <a rel="external" target="_blank" href="https://tools.pingdom.com">Pingdom Tools</a>. En ese entonces el portafolio tenía el tamaño de 245.6 KB.</a></p>
+									</section>
+
+									<hr />
+
+									<section id="ejercicio3">
+										<h2>Ejercicio 3</h2>
+										<p>El editor de HTML5 elegido para desarrollo de las prácticas fue el <a rel="external" target="_blank" href="https://visualstudio.microsoft.com/es/">Visual Studio Code</a>. A continuación las imágenes de las configuraciones solicitadas para el Ejercicio 3:</p>
 										<div class="box alt">
 											<div class="row gtr-uniform">
-												<p>Trás submeter a revisión del sitio <a rel="external" target="_blank" href="https://validator.w3.org">https://validator.w3.org</a> el código fuente de este sitio web, fueron descubiertos los errores presentados en la imagen a continuación:</p>                                                   
-												<div class="col-12"><span class="image fit"><img src="images/valide_html.jpg" alt="Printscreen de los errores producidos trás validación del código fuente del borrador de este sitio web"></span></div>
-												<p>Para corregir los citados errores, leímos la <a rel="external" target="_blank" href="https://html.spec.whatwg.org/multipage/dom.html#flow-content-2">documentación enlazada en cada error</a> y cambiamos la tag "p" por la "br".</p>												
-												<p>Por no existir la opción "Information | View Page Information" en la barra de herramientas <a rel="external" target="_blank" href="https://chrispederick.com/work/web-developer/">Web Developer</a>, sugerida por el profesor, en la fecha de 21 de diciembre de 2018 revisamos el código fuente del portafolio, aún en desarrollo, en el <a rel="external" target="_blank" href="https://tools.pingdom.com">Pingdom Tools</a>. En ese entonces el portafolio tenía el tamaño de 245.6 KB.</a></p>
-												
+												<div class="col-6"><span class="image fit"><img src="images/letra_ tipo_tamaño_colores.jpg" alt="Código CSS informando tipo, tamaño y colores de fuente para el elemento body."></span></div>
+												<div class="col-6"><p>Código determinando el tipo de letra, tamaño, color de fondo y color de letra genéricos al elemento body.</p></div>
+												<div class="col-6"><h1 class="imm">Código determinando la imagen de fondo, tipo y tamaño de letra distintos para h1.</h1></div>
+												<div class="col-6"><span class="image fit"><img src="images/h1_background_font.jpg" alt="Código CSS informando background, tipo, tamaño y colores de fuente para el elemento h1."></span></div>
+												<div class="col-6"><span class="image fit"><img src="images/p_ul.jpg" alt="Código CSS informando alineación del texto y anchura de la línea en un listado."></span></div>
+												<div class="col-6"><p class="content">Código determinando alineación del texto a “justificado” para párrafos (p) y “a la izquierda” con un sangrado de 10 píxeles para listas no numeradas (ul).</p>
+													<ul class="imm">
+														<li>Ejemplo naranja</li>
+														<li>Ejemplo lila</li>
+														<li>Ejemplo rojo</li>
+													</ul>												
+												</div>
+												<div class="col-6"><p>Código determinando que los enlaces (a) se resalten en verde al pasar sobre ellos y que se queden en amarillo después de ser visitados.</p>
+													<ul>
+														<li><a class="imm" href="#ejercicio3">Enlace teste</a></li>
+													</ul>
+												</div>
+												<div class="col-6"><span class="image fit"><img src="images/enlaces_hover_visited.jpg" alt="Código CSS informando configuración para enlaces antes y después de visitados."></span></div>
 											</div>
 										</div>
 									</section>
-
 
 										<p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing blandit tempus accumsan.</p>
 										<hr />
