All obligatories html css exercises

--- a/practica_texto.html
+++ b/practica_texto.html
@@ -20,7 +20,7 @@
     <div id="wrapper">
       <!-- Header -->
       <header id="header">
-        <h1>HTML &amp; CSS</h1>
+        <h1>HTML & CSS</h1>
         <p>Portafolio</p>
       </header>
       <!-- Nav -->
@@ -35,6 +35,7 @@
           <li><a href="#ejercicio5">Ejercicio 5</a></li>
           <li><a href="#ejercicio6">Ejercicio 6</a></li>         
           <li><a href="#ejercicio7">Ejercicio 7</a></li>
+          <li><a href="#actividad2">Actividad 2</a></li>
         </ul>
       </nav>
       <!-- Main -->
@@ -169,7 +170,7 @@
                 configuraciones solicitadas en el Ejercicio 3:</p>
               <div class="box alt">
                 <div class="row gtr-uniform">
-                  <div class="col-6"><span class="image fit"><img src="images/letra_+tipo_tama%C3%B1o_colores.jpg" alt="Código CSS informando tipo, tamaño y colores de fuente para el elemento body."></span></div>
+                  <div class="col-6"><span class="image fit"><img src="images/letra_ tipo_tamano_colores.jpg" alt="Código CSS informando tipo, tamaño y colores de fuente para el elemento body."></span></div>
                   <div class="col-6">
                     <p>Código CSS determinando el tipo de letra, tamaño, color
                       de fondo y color de letra genéricos al elemento body.</p>
@@ -321,7 +322,30 @@
                   <div class="col-12"><span class="image fit"><img src="images/media_querie_cod.jpg" alt="Código implantando las media queries"></span></div>
                 </div>
               </div>
+            </section>
 
+            <hr />
+
+            <section id="actividad2">
+              <h2>Actividad 2</h2>
+              <p>Comparando los dos ficheros sugeridos del sitio web <a rel="external" target="_blank" href="http://diveintohtml5.info/examples/">Dive into HTML5</a>, <a href="diveintohtml5/blog-html5.html" target="_blank">blog-html5.html</a> y <a href="diveintohtml5/blog-original.html" target="_blank">blog-original.html</a>, observamos diferencias en las etiquetas y estructuración del código. Por ejemplo: el código original no tiene la etiqueta <i>header</i>, <i>nav</i>, <i>article</i> y <i>footer</i> para ordenar el fichero, todas las citadas etiquetas son una classe de la etiqueta <i>div</i>. Al contrario del fichero HTML5, las cuales son etiquetas establecidas por la lenguage.</p>
+              
+              <div class="box alt">
+                <div class="row gtr-uniform">                  
+                  <div class="col-12"><span class="image fit"><img src="images/compare_html5.jpg" alt="Pantalla con fondo negro y letras multicolores dónde se ve los dos ficheros lado a lado."></span></div>
+                </div>
+              </div>
+
+              <p>Haz clic en el botón para ingresar en el banco de prueba, que es el fichero HTML5 con los cambios solicitados en la actividade:</p>
+              <ul>
+                <li>En los tres primeros enlaces de la cabecera, las respuestas a los tres primeros ejercicios de esta misma práctica.</li>
+                <li>En el cuarto, los datos relativos a la propuesta de su trabajo de asignatura con los datos que ha introducido en la tarea correspondiente.</li>
+                <li>Incorpore un ejemplo de <i>audio</i> y uno de <i>video</i>, como los empleados en el ejercicio 1, ampliados con el uso de la etiqueta <i>source</i> para ofrecer alternativas que el navegador pueda mostrar y un párrafo con un enlace al archivo de audio y el de vídeo, respectivamente, para el caso de que no se puedan utilizar estas versiones propuestas.</li>                
+              </ul>
+              <ul class="actions fit">                
+                <li><a href="diveintohtml5/bancodepruebas.html" target="_blank" class="button primary fit">Banco de pruebas</a></li>                
+              </ul>             
+              
             </section>
 
             <!-- <p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida
