Start opcional exercise

--- a/diveintohtml5/trabasignatura.html
+++ b/diveintohtml5/trabasignatura.html
@@ -4,11 +4,9 @@
 <head>
   <meta charset="utf-8" />
   <meta name="robots" content="noindex" />
-  <title>My Weblog</title>
+  <title>Banco de Pruebas</title>
   <!--[if lt IE 9]><script src="../j/html5.js"></script><![endif]-->
   <link rel="stylesheet" href="style-html5.css" />
-  <link rel="alternate" type="application/atom+xml" title="Banco de pruebas HTML5" href="/feed/" />
-  <link rel="search" type="application/opensearchdescription+xml" title="Banco de pruebas" href="opensearch.xml" />
 </head>
 
 <body>
