--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<meta name="author" content="Ana Cecília Vieira, Johans Peña, Andrea Naranjo">
 		<meta name="description" content="Portafolio hecho durante la disciplina IMM del MUGI, resultado de la compilación de todas las actividades prácticas.">
 		<link rel="stylesheet" type="text/css" href="assets/css/main.css">
-		<link rel="icon" href="images/home_portafolio.jpg">
+		<link rel="icon" href="images/imm_icon.ico">
 		
 	</head>
 	<body class="is-preload">
@@ -51,7 +51,7 @@
 										</header>
 										<p>Este portafolio es el compilado de todas las actividades 
 										practicas aprendidas durante la asignatura Información 
-										Multimedia en Entornos Multidispositivo en el periodo entre sept. 2018 y ene. 2019. </p>										
+										Multimedia en Entornos Multidispositivo en el periodo entre sept. 2018 y ene. 2019 del <a rel="external" target="_blank" href="http://mugi.webs.upv.es">Máster Oficial Universitario en Gestión de la Información</a> de la Universitat Politècnica de València. </p>										
 									</div>
 									<span class="image"><img src="images/home_portafolio.png" alt="Forma circular de color lilas que contiene dibujos de un micrófono, película, cd y claqueta" /></span>
 								</div>
