--- a/diveintohtml5/bancodepruebas.html
+++ b/diveintohtml5/bancodepruebas.html
@@ -4,11 +4,9 @@
 <head>
   <meta charset="utf-8" />
   <meta name="robots" content="noindex" />
-  <title>My Weblog</title>
+  <title>Banco de pruebas</title>
   <!--[if lt IE 9]><script src="../j/html5.js"></script><![endif]-->
   <link rel="stylesheet" href="style-html5.css" />
-  <link rel="alternate" type="application/atom+xml" title="Banco de pruebas HTML5" href="/feed/" />
-  <link rel="search" type="application/opensearchdescription+xml" title="Banco de pruebas" href="opensearch.xml" />
 </head>
 
 <body>
@@ -22,9 +20,9 @@
 
     <nav>
       <ul>
-        <li><a href="../practica_texto.html" target="_blank">Ejercicio 1</a></li>
-        <li><a href="../practica_texto.html" target="_blank">Ejercicio 2</a></li>
-        <li><a href="../practica_texto.html" target="_blank">Ejercicio 3</a></li>
+        <li><a href="../practica_texto.html#ejercicio1" target="_blank">Ejercicio 1</a></li>
+        <li><a href="../practica_texto.html#ejercicio2" target="_blank">Ejercicio 2</a></li>
+        <li><a href="../practica_texto.html#ejercicio3" target="_blank">Ejercicio 3</a></li>
         <li><a href="trabasignatura.html">Trabajo de asignatura</a></li>
       </ul>
     </nav>
