Exercises html and screencast completed

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 							<li><a href="practica_texto.html">Texto</a></li>
 							<li><a href="practica_imagen">Imagen</a></li>
 							<li><a href="practica_audio">Áudio</a></li>
-							<li><a href="practica_stream">Stream</a></li>
+							<li><a href="practica_video.html">Video</a></li>
 						</ul>
 					</nav>
 
@@ -51,13 +51,16 @@
 										</header>
 										<p>Este portafolio es el compilado de todas las actividades 
 										practicas aprendidas durante la asignatura Información 
-										Multimedia en Entornos Multidispositivo en el periodo entre sept. 2018 y ene. 2019 del <a rel="external" target="_blank" href="http://mugi.webs.upv.es">Máster Oficial Universitario en Gestión de la Información</a> de la Universitat Politècnica de València. </p>										
+										Multimedia en Entornos Multidispositivo en el periodo entre sept. 
+										2018 y ene. 2019 del <a rel="external" target="_blank" 
+										href="http://mugi.webs.upv.es">Máster Oficial Universitario en 
+										Gestión de la Información</a> de la Universitat Politècnica de València. </p>										
 									</div>
-									<span class="image"><img src="images/home_portafolio.png" alt="Forma circular de color lilas que contiene dibujos de un micrófono, película, cd y claqueta" /></span>
+									<span class="image"><img src="images/home_portafolio.png" 
+										alt="Forma circular de color lilas que contiene dibujos de un micrófono
+										, película, cd y claqueta"></span>
 								</div>
 							</section>
-
-
 					</div>
 
 				<!-- Footer -->
