--- a/practica_texto.html
+++ b/practica_texto.html
@@ -418,7 +418,8 @@
               <li><a href="diveintohtml5/bancodepruebas.html" target="_blank" class="button primary fit">Banco de pruebas</a></li>
             </ul>
           </section>
-          <a class="button small imm" href="#">Cumbre</a> 
+          <a class="button small imm" href="#">Cumbre</a>
+        </section>
       </div>
       
       <!-- Footer -->
