--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<link rel="stylesheet" type="text/css" href="assets/css/main.css">
 		<link href="https://fonts.googleapis.com/css?family=Concert+One%7CMonoton" rel="stylesheet">
 		<link rel="icon" href="images/home_portafolio.jpg">
-		
+
 	</head>
 	<body class="is-preload">
 
@@ -34,7 +34,7 @@
 							<li><a href="index.html" class="active">Home</a></li>
 							<li><a href="#equipo">Equipo</a></li>
 							<li><a href="practica_texto.html">Texto</a></li>
-							<li><a href="practica_imagen">Imagen</a></li>
+							<li><a href="practica_imagen.html">Imagen</a></li>
 							<li><a href="practica_audio">Áudio</a></li>
 							<li><a href="practica_stream">Stream</a></li>
 						</ul>
@@ -50,9 +50,9 @@
 										<header class="major">
 											<h2>Portafolio</h2>
 										</header>
-										<p>Este portafolio es el compilado de todas las actividades 
-										practicas aprendidas durante la asignatura Información 
-										Multimedia en Entornos Multidispositivo en el periodo entre sept. 2018 y ene. 2019. </p>										
+										<p>Este portafolio es el compilado de todas las actividades
+										practicas aprendidas durante la asignatura Información
+										Multimedia en Entornos Multidispositivo en el periodo entre sept. 2018 y ene. 2019. </p>
 									</div>
 									<span class="image"><img src="images/home_portafolio.png" alt="Forma circular de color lilas que contiene dibujos de un micrófono, película, cd y claqueta" /></span>
 								</div>
@@ -66,7 +66,7 @@
 						<section id="equipo">
 							<h2>Equipo</h2>
 							<p>Somos una bibliotecária, un ingenero industrial y una periodista con el objetivo de profundizar nuestro conocimiento sobre Gestión de la Información.</p>
-							
+
 						</section>
 						<section>
 							<h2>Contactos</h2>
@@ -78,7 +78,7 @@
 								<dt>Johans Peña</dt>
 								<dd>jopear4@inf.upv.es</dd>
 							</dl>
-							
+
 						</section>
 						<p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 					</footer>
