link Galeria añadido

--- a/practica_imagen.html
+++ b/practica_imagen.html
@@ -476,7 +476,7 @@
             <div class="box alt">
               <h2>Ejercicios 7 y 8</h2>
               <h3>Compresión de imágenes
-                <br>Dale <a href="#" class="button primary">click </a>
+                <br>Dale <a href="Galeria/index.html" class="button primary">click </a>
                 para ver el ejercicio completo
 <br>
 <br>
