--- a/practica_imagen.html
+++ b/practica_imagen.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Ana Cecília Vieira, Johans Peña, Andrea Naranjo">
     <meta name="description" content="Portafolio hecho durante la disciplina IMM del MUGI, resultado de la compilación de todas las actividades prácticas.">
     <link rel="stylesheet" type="text/css" href="assets/css/main.css">
-    <link rel="icon" href="images/home_portafolio.jpg">
+    <link rel="icon" href="images/imm_icon.ico">
   </head>
   <body class="is-preload">    
     <!-- Wrapper -->
