New branch galeria

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 							<li><a href="index.html" class="active">Home</a></li>
 							<li><a href="#equipo">Equipo</a></li>
 							<li><a href="practica_texto.html">Texto</a></li>
-							<li><a href="practica_imagen">Imagen</a></li>
+							<li><a href="practica_imagen.html">Imagen</a></li>
 							<li><a href="practica_audio">Áudio</a></li>
 							<li><a href="practica_video.html">Video</a></li>
 						</ul>
