--- a/Galeria/index.html
+++ b/Galeria/index.html
@@ -31,14 +31,15 @@
           </p>
         </article>
         <article> <a class="thumbnail" href="images/Noruega.bmp"><img
-              src="images/Noruega2.tiff"
+              src="images/Noruega3.tiff"
               alt="Archivo tiff no disponible para Firefox, Chrome"
               title="Se muestra imagen bmp"
               style="width: 119px; height: 63px;"></a>
-          <h2>Sin compresión - JPEG</h2>
+          <h2>Sin compresión - LZW</h2>
           <p>Formato: TIFF<br>
-            Tamaño: 237 568 Bytes<br>
-            Ratio de compresión: 4,41
+            Tamaño: 730 000 Bytes<br>
+            Ratio de compresión: 1,43<br>
+            Se muestra imagen BMP porque TIFF no está disponible en varios navegadores
           </p>
         </article>
         <article> <a class="thumbnail" href="images/Noruega10.jpg"><img src="images/Noruega10.jpg"
@@ -86,14 +87,15 @@
             Tamaño: 1258291.2 Bytes<br>
           </p>
         </article>
-        <article> <a class="thumbnail" href="images/huntress.bmp"><img src="images/huntress2.tiff"
+        <article> <a class="thumbnail" href="images/huntress.bmp"><img src="images/huntress3.tiff"
               alt="Archivo tiff no disponible para Firefox, Chrome"
               title="Se muestra imagen bmp"
               style="fit"></a>
-          <h2>Sin compresión - JPEG</h2>
+          <h2>Sin compresión - LZW</h2>
           <p>Formato: TIFF<br>
             Tamaño: 379 904 Bytes<br>
             Ratio de compresión: 3,312
+            Se muestra imagen BMP porque TIFF no está disponible en varios navegadores
           </p>
         </article>
         <article> <a class="thumbnail" href="images/huntress10.jpg"><img src="images/huntress10.jpg"
