Practica de audio

--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
 		<meta name="author" content="Ana Cecília Vieira, Johans Peña, Andrea Naranjo">
 		<meta name="description" content="Portafolio hecho durante la disciplina IMM del MUGI, resultado de la compilación de todas las actividades prácticas.">
 		<link rel="stylesheet" type="text/css" href="assets/css/main.css">
-		<link rel="icon" href="images/imm_icon.ico">
-		
+		<link rel="icon" href="images/imm_icon.ico">		
 	</head>
 	<body class="is-preload">
 
@@ -33,8 +32,8 @@
 							<li><a href="index.html" class="active">Home</a></li>
 							<li><a href="#equipo">Equipo</a></li>
 							<li><a href="practica_texto.html">Texto</a></li>
-							<li><a href="practica_imagen">Imagen</a></li>
-							<li><a href="practica_audio">Áudio</a></li>
+							<li><a href="practica_imagen.html">Imagen</a></li>
+							<li><a href="practica_audio.html">Áudio</a></li>
 							<li><a href="practica_video.html">Video</a></li>
 						</ul>
 					</nav>
