css validation review

--- a/practica_texto.html
+++ b/practica_texto.html
@@ -185,8 +185,7 @@
                 Studio Code</a>. A continuación las imágenes de las configuraciones solicitadas en el Ejercicio 3:</p>
             <div class="box alt">
               <div class="row gtr-uniform">
-                <div class="col-6"><span class="image fit"><img src="images/letra_ tipo_tamano_colores.jpg" 
-                  alt="Código CSS informando tipo, tamaño y colores de fuente para el elemento body."></span></div>
+                <div class="col-6"><span class="image fit"><img src="images/letra_ tipo_tamano_colores.jpg" alt="Código CSS informando tipo, tamaño y colores de fuente para el elemento body."></span></div>
                 <div class="col-6">
                   <p>Código CSS determinando el tipo de letra, tamaño, color
                     de fondo y color de letra genéricos al elemento body.</p></div>
@@ -265,7 +264,14 @@
                 <div class="col-12"><span class="image fit"><img src="images/tools_validate_css.png" alt="Listado de errores y validación de la plantilla como CSS nivel 3"></span></div>
               </div>
             </div>
-            <p>Para la opción <i>Tools | Validate Local CSS</i> no tuvimos
+            <p>Después de los ajustes obtuvimos la correta validación del CSS:</p>
+            <div class="box alt">
+              <div class="row gtr-uniform">
+                <div class="col-12"><span class="image fit"><img src="images/css_valido.png" alt="Pantalla infromando la aprobación del código en los estandares CSS3"></span></div>
+              </div>
+            </div>
+            <p>Para la opción <i>Tools | Validate Local CSS</i> de la herramienta
+               <a rel="external" target="_blank" href="https://chrispederick.com/work/web-developer/">Web Developer</a> no tuvimos
               éxito. Los intentos de validación ocurrieron en los navegadores
               Opera, Firefox y Chrome, todos con el mismo resultado:</p>
             <div class="box alt">
