--- a/practica_audio.html
+++ b/practica_audio.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!--
 	Stellar by HTML5 UP	html5up.net | @ajlkn	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)-->
-<html>
+<html lang="es">
   <head>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8">
 		<title>Portafolio IMM 2018/2019</title>
@@ -36,8 +36,7 @@
       <div id="main">
         <!-- Content -->
         <section id="content" class="main">
-          <!-- Text -->
-          <section>
+          <!-- Text -->          
             <p>"En esta práctica se abordan las cuestiones básicas relativas a
               la adquisición, representación y edición de información de audio.
               En particular, trataremos la adquisición de audio a partir de los
@@ -369,11 +368,11 @@
                       <div class="col-6"><p><b>3)</b> Captura de la locución con sonido ambiente: 
                         Para esta parte se utilizaron dos efectos, 
                         "People Talking" y "Tos persona", ambas descargadas del sitio web 
-                        <a rel="externo" target="_blank" href="http://www.sonidosmp3gratis.com">http://www.sonidosmp3gratis.com</a></p></div>
+                        <a rel="external" target="_blank" href="http://www.sonidosmp3gratis.com">http://www.sonidosmp3gratis.com</a></p></div>
                       <div class="col-6"><span class="image fit"><img src="images/au_act6_proceso3.PNG"></span></div>
                       <div class="col-6"><p><b>4)</b> Captura de la locución con aplausos al final: 
                         Para esta parte se utilizó el efecto "Aplausos 1", descargado del sitio web 
-                        <a rel="externo" target="_blank" href="http://www.sonidosmp3gratis.com">http://www.sonidosmp3gratis.com</a></p></div>
+                        <a rel="external" target="_blank" href="http://www.sonidosmp3gratis.com">http://www.sonidosmp3gratis.com</a></p></div>
                       <div class="col-6"><span class="image fit"><img src="images/au_act6_proceso4.PNG"></span></div>
                     </div>
                   </div>
