--- a/practica_imagen.html
+++ b/practica_imagen.html
@@ -58,6 +58,7 @@
                     <li>Nombre de la imagen: retrato.bmp</li>
                     <li>Dimensiones: 600 x 400</li>
                     <li>Resolución espacial: 71.9836 PPI (píxel per inch)</li>
+                    <li>Peso: 720 Kb</li>
                   </ul></div>
                   <div class="col-6"><span class="image fit"><img src="images/retrato.bmp" alt="La imagen muestra una niña y una chica abrazadas."></span></div>                
               </div>
@@ -285,17 +286,17 @@
                 <div class="col-4"><span class="image fit"><img src="images/4/4_posicionado.bmp"
                       alt="paleta personalizada 16c"
                       title="4 posicionado"></span>
-                  <center><strong>4 posicionado</strong></center>
+                  <center><strong>Difusión "posicionado"</strong></center>
                 </div>
                 <div class="col-4"><span class="image fit"><img src="images/4/4_sangrado_de_color_reducido_-_floyd_steinberg_normal.bmp"
                       alt="sangrado de color reducido"
                       title="sangrado de color reducido"></span>
-                  <center><strong>Sangrado de color reducido</strong></center>
+                  <center><strong>Sangrado de color reducido - floyd steinberg</strong></center>
                 </div>
                 <div class="col-4"><span class="image fit"><img src="images/4/4_floyd_steinberg_normal.bmp"
                       alt="floyd steinberg normal"
                       title="floyd steinberg normal"></span>
-                  <center><strong>Floyd steinberg normal</strong></center>
+                  <center><strong>Difusión normal - floyd steinberg normal</strong></center>
                 </div>
               </div>
             </div>
@@ -315,7 +316,7 @@
                 </thead>
                 <tbody>
                   <tr>
-                    <td>16 colores con difusión floyd steinberg normal</td>
+                    <td>Difusión normal - floyd steinberg normal</td>
                     <td>4 floyd steinberg normal.bmp</td>
                     <td>120 KB</td>
                     <td>16</td>
@@ -325,7 +326,7 @@
                       muy molesto.</td>
                   </tr>
                   <tr>
-                    <td>16 colores con difusión floyd steinberg reducido</td>
+                    <td>Sangrado de color reducido - floyd steinberg</td>
                     <td>4 sangrado de color reducido - floy steinberg
                       normal.bmp</td>
                     <td>120 KB</td>
@@ -336,7 +337,7 @@
                       dos opciones. </td>
                   </tr>
                   <tr>
-                    <td>16 colores con difusión "posicionado"</td>
+                    <td>Difusión "posicionado"</td>
                     <td>4 posicionado.bmp</td>
                     <td>120 KB</td>
                     <td>16</td>
@@ -369,15 +370,15 @@
                       usemap="#europa"                      
                       src="images/media/mapa_sensible/mapaEuro.png">
                   <map name="europa">
-                    <area shape="circle" coords="75,436,45" alt="España" target="_blank"
+                    <area shape="circle" coords="75,380,35" alt="España" target="_blank"
                       href="images/media/mapa_sensible/spain.jpg">
-                    <area shape="circle" coords="74,217,36" alt="Irlanda" target="_blank"
+                    <area shape="circle" coords="74,206,28" alt="Irlanda" target="_blank"
                     href="images/media/mapa_sensible/ireland.jpg">                    
-                    <area shape="circle" coords="159,325,35" alt="Francia" target="_blank"
+                    <area shape="circle" coords="148,294,30" alt="Francia" target="_blank"
                     href="images/media/mapa_sensible/france.jpg">
-                    <area shape="circle" coords="237,290,32" alt="Alemania" target="_blank"
+                    <area shape="circle" coords="210,257,28" alt="Alemania" target="_blank"
                       href="images/media/mapa_sensible/germany.jpg">                    
-                    <area shape="circle" coords="364,443,30" alt="Grecia" target="_blank"
+                    <area shape="circle" coords="317,383,29" alt="Grecia" target="_blank"
                       href="images/media/mapa_sensible/greece.jpg">
                   </map></span>
                 </div>                 
@@ -515,7 +516,7 @@
       <footer id="footer">
         <section id="equipo">
           <h2>Equipo</h2>
-          <p>Somos una bibliotecária, un ingenero industrial y una periodista
+          <p>Somos una bibliotecária, un ingenero en telecomunicaciones y una periodista
             con el objetivo de profundizar nuestro conocimiento sobre Gestión de
             la Información.</p>
         </section>
