--- a/practica_texto.html
+++ b/practica_texto.html
@@ -257,7 +257,7 @@
 
           <section id="actividad1">
             <h2>Actividad 1</h2>
-            <p>Trás submeter el portafolio a revisión del sitio <a rel="external" target="_blank" href="https://validator.w3.org">https://validator.w3.org</a>,
+            <p>Trás someter el portafolio a revisión del sitio <a rel="external" target="_blank" href="https://validator.w3.org">https://validator.w3.org</a>,
               fueron presentados los resultados a continuación:</p>
             <div class="box alt">
               <div class="row gtr-uniform">
@@ -410,7 +410,7 @@
 
           <section id="actividad3">
             <h2>Actividad 3 (optativa)</h2>
-            <p>Fue echo cambio en el código CSS del Banco de Pruebas de la Actividad 2 para que el deseño sea responsivo
+            <p>Fue hecho cambio en el código CSS del Banco de Pruebas de la Actividad 2 para que el diseño sea responsivo
                al tamaño de la pantalla. El código añadido fue:</p>
             <pre><code>
             @media screen and (max-width: 768px) {
@@ -432,7 +432,7 @@
       <footer id="footer">
         <section id="equipo">
           <h2>Equipo</h2>
-          <p>Somos una bibliotecária, un ingenero industrial y una periodista
+          <p>Somos una bibliotecária, un ingenero en telecomunicaciones y una periodista
             con el objetivo de profundizar nuestro conocimiento sobre Gestión de
             la Información.</p>
         </section>
