--- a/practica_video.html
+++ b/practica_video.html
@@ -96,7 +96,7 @@
       <footer id="footer">
         <section id="equipo">
           <h2>Equipo</h2>
-          <p>Somos una bibliotecária, un ingenero industrial y una periodista
+          <p>Somos una bibliotecária, un ingenero en telecomunicaciones y una periodista
             con el objetivo de profundizar nuestro conocimiento sobre Gestión de
             la Información.</p>
         </section>
