Versión para entrega

--- a/practica_audio.html
+++ b/practica_audio.html
@@ -59,8 +59,7 @@
                   <div class="col-6">
                     <ul>
                       <li>La información de la tarjeta de sonido no pude ser
-                        obtenida con el visor de Windows. Por este motivo se
-                        buscaron las especificaciones del fabricante, en este
+                        obtenida con el visor de Windows. Por este motivo buscamos las especificaciones del fabricante, en este
                         caso Lenovo. </li>
                       <li>La tarjeta de sonido instalada es Realtek High
                         Definition Audio ALC892</li>
@@ -88,15 +87,15 @@
                 reproductor por defecto. Haga uso del propio VLC o de Audacity
                 [3] para conseguir una reproducción sin problemas. </p>
               <h3>Resultados de la actividad</h3>
-              <p>Para esta actividad se utilizó un fichero del sitio web
+              <p>Para esta actividad utilizamos un fichero del sitio web
                 <a rel="external" target="_blank" href="http://www.2l.no/hires/">http://www.2l.no/hires/</a> el cual funciona como un banco de
                 pruebas para nuevos formatos de audio y trabajos musicales. La
                 opción elegida fue la siguiente: Fichero original: Concierto
                 para violín en Re mayor_Mozart Duración: 9 minutos y 14 segundos
                 Formato: .flac</p>
               <h3>Tabla</h3>
-              <p>Las conversiones de formato se realizaron utilizando el
-                programa VLC. Parala reproducción se usó el mismo programa.</p>
+              <p>Las conversiones de formato las realizamos utilizando el
+                programa <a rel="external" target="_blank" href="https://www.videolan.org/vlc/index.es.html"> VLC</a>. Para la reproducción se usó el mismo programa.</p>
               <div class="table-wrapper">
                 <table>
                   <thead>
@@ -122,7 +121,7 @@
                       <td>Similiar a la conversión Flac, similar calidad</td>
                     </tr>
                     <tr>
-                      <td>MP3(.mp3,128kbps</td>
+                      <td>MP3(.mp3,128kbps)</td>
                       <td>Audio–MP3= RAW+ MP3</td>
                       <td>13056 KB</td>
                       <td>Calidad media, se pierden tonos altos y bajos</td>
@@ -131,7 +130,7 @@
                       <td>MP3 (.mp3,32kbps)</td>
                       <td>Audio– MP3= RAW+ MP3</td>
                       <td>13056 KB</td>
-                      <td>Calida inferior a la de MP3 128kbps</td>
+                      <td>Calidad inferior a la de MP3 128kbps</td>
                     </tr>
                     <tr>
                       <td>AAC (.mp4a o .m4a, 128 kbps)</td>
@@ -181,7 +180,7 @@
                   Archivo|Exportar como WAV</li>
               </ol>
               <h3>Resultado de la actividad: </h3>
-              <p> En la siguiente captura se muestra el resultado de la
+              <p>En la siguiente captura mostramos el resultado de la
                 actividad y al final, se encuentra el archivo para reproducir.
               </p>
               <div class="box alt">
@@ -366,12 +365,12 @@
                       <div class="col-6"><b>2)</b> Captura de la locución con Reverberancia</div>
                       <div class="col-6"><span class="image fit"><img src="images/au_act6_proceso2.PNG"></span></div>
                       <div class="col-6"><p><b>3)</b> Captura de la locución con sonido ambiente: 
-                        Para esta parte se utilizaron dos efectos, 
+                        Para esta parte utilizamos dos efectos, 
                         "People Talking" y "Tos persona", ambas descargadas del sitio web 
                         <a rel="external" target="_blank" href="http://www.sonidosmp3gratis.com">http://www.sonidosmp3gratis.com</a></p></div>
                       <div class="col-6"><span class="image fit"><img src="images/au_act6_proceso3.PNG"></span></div>
                       <div class="col-6"><p><b>4)</b> Captura de la locución con aplausos al final: 
-                        Para esta parte se utilizó el efecto "Aplausos 1", descargado del sitio web 
+                        Para esta parte utilizamos el efecto "Aplausos 1", descargado del sitio web 
                         <a rel="external" target="_blank" href="http://www.sonidosmp3gratis.com">http://www.sonidosmp3gratis.com</a></p></div>
                       <div class="col-6"><span class="image fit"><img src="images/au_act6_proceso4.PNG"></span></div>
                     </div>
